# flights-cronjob-app

./: .gitignore  Cargo.toml  add-sqlx-cache.sh  pre-commit-hook  start-db.sh
flights-data/: .env.tmpl  Cargo.toml  Dockerfile  buildspec.yml  config.yaml
flights-data/migrations/: 001_init.sql  002_add_airports.sql  003_add_countries.sql  004_add_new_schema_tables.sql  005_populate_locations_table.sql  006_add_monitored_trips.sql  007_add_fk_constraint_on_flights.sql  008_create_new_route_trigger.sql  009_drop_unused_add_coordinates.sql  010_populate_coordinates_columns.sql
flights-data/src/: configuration.rs  db_schema.rs  lib.rs  main.rs
flights-data/src/data_harvest/: executor.rs  locations_api_client.rs
flights-data/src/migration/: executor.rs  locations_api_client.rs  populate_coordinates_migrator.rs  populate_locations_migrator.rs
flights-monitor/: .env  Cargo.toml  Dockerfile  buildspec.yml  config.yaml
flights-monitor/.sqlx/: query-0f9733cb2fc364e2e0ec3757765099d3b0f21d57fb8f3c542f7022e5089b2e1f.json
flights-monitor/migrations/2024-03-05-143013_create_users/: up.sql
flights-monitor/migrations/2024-03-05-155604_create_airports/: down.sql  up.sql
flights-monitor/migrations/2024-03-05-161716_create_countries/: down.sql  up.sql
flights-monitor/migrations/2024-03-05-162555_create_routes_and_user_routes_and_trips/: down.sql  up.sql
flights-monitor/migrations/2024-03-14-154359_create_initial_tables/: down.sql  up.sql
flights-monitor/migrations/2024-03-28-191936_change_trips_inserted_at_to_datetime/: down.sql  up.sql
flights-monitor/src/: api_client.rs  configuration.rs  main.rs  models.rs  monitor.rs  schema.rs
flights-web/: .env.tmpl  Cargo.toml  Dockerfile  buildspec.yml  config.yaml
flights-web/.sqlx/: query-8f7e97f8383b08ad6d86ee95afff5c7b7083759bac4fc18702c3e9098cf202f2.json
flights-web/pages/: new_trip.html
flights-web/src/: configuration.rs  lib.rs  main.rs  startup.rs
flights-web/src/api/: locations.rs
flights-web/src/routes/: mod.rs  monitor.rs  trips.rs
flights-web/src/service/: search.rs
flights-web/templates/: trips.html
flights-web/tests/: health_check.rs
