[package]
name = "flights-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
tokio.workspace = true

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["postgres", "uuid", "chrono", "migrate", "runtime-tokio-native-tls"]