[package]
name = "flights-data"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "flights-data"

[dependencies]
chrono.workspace = true
config.workspace = true
dotenvy.workspace = true
sea-query.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["postgres", "uuid", "chrono", "migrate", "macros", "runtime-tokio-native-tls"]