[package]
name = "flights-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
dotenvy = "0.15"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.114"

