[package]
name = "flights-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
dotenvy = "0.15"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true