[package]
name = "flights-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
config.workspace = true
dotenvy = "0.15"
reqwest.workspace = true
sea-query.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["postgres", "uuid", "chrono", "macros", "runtime-tokio-native-tls"]