[package]
name = "flights-web"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "flights-web"

[dependencies]
actix-web = "4.5.1"
askama = "0.12.1"
config.workspace = true
dotenvy.workspace = true
flights-data = { path = "../flights-data" }
sea-query.workspace = true
serde.workspace = true
tokio.workspace = true

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["postgres", "uuid", "chrono", "macros", "runtime-tokio-native-tls"]

[dev-dependencies]
reqwest.workspace = true